# symachin

./: .gitignore  CMakeLists.txt  LICENSE  README.md
examples/: cancellation.sm  example.sm  grouping.sm  multilinecomments.sm  multiplications.sm  numerics.sm  replace.sm  vector.sm
include/interpreter/: Lexer.h  LexerException.h  Parser.h  ParserException.h
include/symachin/: Expression.h  ExpressionParser.h  ExpressionParserException.h  Factor.h  FactorException.h  SymachinException.h  Term.h  config.h.in
include/symachin/Operators/: Operator.h  Replace.h
interpreter/: CMakeLists.txt  Lexer.cpp  Main.cpp  Parser.cmd.cpp  Parser.cpp
lib/: CMakeLists.txt  Expression.cpp  ExpressionParser.cpp  Factor.cpp  SymachinException.cpp  Term.cpp
lib/Operators/: Replace.cpp
vim/: symachin.vim
